# Robotica_g7_25-26

./: README.md  comados_para_nuevo_componente.txt  comandoReorganizar.txt  compute.txt  ejemplo1.tar.xz  robotControl.txt  start_robot.sh
Ejercicios/: main.cpp
actividad0/Ejercicios/: CMakeLists.txt
actividad0/ejemplo1/: counterDlg.ui
actividad1/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  chocachoca.cdsl  cmake_install.cmake
actividad1/.qt/: QtDeploySupport.cmake
actividad1/etc/: config  config.new  config.toml
actividad1/src/: mainUI.ui  specificworker.cpp  specificworker.cpp.new  specificworker.h
actividad2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
actividad2/.qt/: QtDeploySupport.cmake
actividad2/actividad2/: CMakeCache.txt  Makefile  localiser.cdsl
actividad2/actividad2/.qt/: QtDeploySupport.cmake
actividad2/actividad2/src/: mainUI.ui  specificworker.h
actividad2/src/: CMakeLists.txt  specificworker.cpp  specificworker.h
actividad3/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake
actividad3/.qt/: QtDeploySupport.cmake
actividad3/etc/: config
actividad3/src/: CMakeLists.txt  door_detector.cpp  image_processor.h  room_detector.h  specificworker.cpp  specificworker.h
actividad4/: CMakeCache.txt  DoxyFile  Makefile  cmake_install.cmake
actividad4/.qt/: QtDeploySupport.cmake
actividad4/localiser/: CMakeCache.txt  Makefile  README.md.new  cmake_install.cmake  localiser.cdsl
actividad4/localiser/.qt/: QtDeploySupport.cmake
actividad4/localiser/etc/: config  config.new  config.toml.new
actividad4/localiser/src/: CMakeLists.txt  image_processor.h  mainUI.ui.new  room_detector.h  specificworker.cpp  specificworker.cpp.new  specificworker.h  specificworker.h.new
actividad4/mnist_detector/: CMakeCache.txt  Makefile  cmake_install.cmake
actividad4/mnist_detector/etc/: config  config.new
actividad4/mnist_detector/src/: Makefile  cmake_install.cmake  my_network.pt  specificworker.py  specificworker.py.new
actividad4/src/: CMakeLists.txt  common_types.h  door_detector.cpp  nominal_room.h  room_detector.cpp  specificworker.cpp  specificworker.h
ejemplo1/: CMakeLists.txt  ejemplo1.cpp  ejemplo1.h  timer.h
(+116 files in other folders)
